fix: catch weird z-indexes from surrounding page

--- a/src/stylesheets/_podlove-subscribe-popup.scss
+++ b/src/stylesheets/_podlove-subscribe-popup.scss
@@ -13,6 +13,10 @@
   width: 100%;
   z-index: 9999999999;
 
+  * {
+    z-index: auto;
+  }
+
   &.podlove-subscribe-popup-animate {
     opacity: 0;
   }
